# CMake-XL-Fortran-Module-Bug

./: CMakeLists.txt  README  bluegenexlc-mpixlf.cmake  main.f  modexample.f
